--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,38 @@ a {
 text-decoration: none;
 }
 
+h1,h2,h3,h4,h5,h6,p {
+margin: 0;
+} 
 ul,ol {
 list-style: none;
+margin-top: 0;
+margin-bottom: 0;
+padding-left: 0;
 }
+ img {
+     display: block;
+     height: auto;
+     max-width: 100%;
+ }
+
+ .container {
+     max-width: 1158px;
+     padding-left: 15px;
+     padding-right: 15px;
+     margin-left: auto;
+     margin-right: auto;
+     outline: 1px solid red;
+ }
 
 /* Page Header */
+
+
+.nav-page {
+display: flex;
+align-items: center;
+
+}
 .logo {
 color:#4D5AE5;
 font-family:Raleway, sans-serif;
@@ -21,12 +48,19 @@ font-weight:700;
 line-height:1.17;
 letter-spacing:0.03em;
 text-transform:uppercase;
+margin-right: 76px;
 }
 
 .logo-part {
     color:#2e2f42;
 }
-
+.nav-list {
+display: flex;
+justify-content: space-between;
+column-gap: 40px;
+padding-top: 24px;
+padding-bottom: 24px;
+}
 .nav-link {
     color:#2E2F42;
     font-size: 16px;
@@ -43,7 +77,10 @@ color:#404BBF;
 .address {
     font-style:normal;
 }
-
+.address-page {
+display: flex;
+align-items: center;
+}
 .address-link {
     color:#434455;
     font-size:16px;
@@ -59,6 +96,9 @@ color:#404BBF;
 /* Hero section */
 .hero-section {
 background-color:#2E2F42;
+padding: 188px 0;
+
+
 }
 
 .hero-section-title {
@@ -68,7 +108,12 @@ background-color:#2E2F42;
     text-align:center;
     letter-spacing:0.02em;
     color:#ffffff;
+    max-width: 496px;
+    margin-left: auto;
+     margin-right: auto;
+     margin-bottom: 48px;
 }
+
 .hero-section-button {
     font-weight: 500;
     font-size: 16px;
@@ -76,6 +121,14 @@ background-color:#2E2F42;
     letter-spacing: 0.04em;
     color:white;
     background: #4d5ae5;
+    margin-left: auto;
+     margin-right: auto;
+     display: block;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+     height: 56px;
+     border: none;
 }
 .hero-section-button:hover,
 .hero-section-button:focus {
@@ -86,6 +139,17 @@ background-color:#2E2F42;
 
 
 /* Our advantages */
+.page-our-advantages {
+padding-top: 120px;
+padding-bottom: 120px;
+}
+.our-advantages-item {
+display: flex;
+gap: 24px;
+}
+.our-advantages-list {
+width: calc((100%-72))/4;
+}
 .our-advantages {
     font-weight:500;
     font-size:20px;
@@ -105,6 +169,14 @@ background-color:#2E2F42;
 /* Our team */
 .our-team {
 background-color:#F4F4FD;
+padding-top: 120px;
+padding-bottom: 120px;
+
+}
+
+.page-our-team {
+display: flex;
+gap: 24px;
 }
 .our-team-title {
     font-weight: 700;
@@ -114,9 +186,12 @@ background-color:#F4F4FD;
     text-transform:capitalize;
     text-align:center;
     color:#2e2f42;
+    margin-bottom: 72px;
 }
-.our-team-list {
+.our-team-item {
 background-color:#ffffff;
+width: 360px;
+border-radius: 0 0 4px 4px;
 }
 
 .our-team-name {
@@ -127,6 +202,11 @@ background-color:#ffffff;
     text-align:center;
     color: #2e2f42;
     background-color: #ffffff;
+    padding-top: 32px;
+    padding-bottom: 8px;
+    padding-left: 65px;
+    padding-right: 65px;
+    
 }
 
 .our-team-role {
@@ -139,6 +219,10 @@ background-color:#ffffff;
 }
 
 /* Our portfolio */
+.our-portfolio-section {
+padding-top: 120px;
+padding-bottom: 120px;
+}
 .our-portfolio {
     font-weight:700;
     font-size: 36px;
@@ -147,14 +231,30 @@ background-color:#ffffff;
     text-transform:capitalize;
     text-align:center;
     color:#2e2f42;
+    margin-bottom: 72px;
+}
+.page-portfolio {
+display: flex;
+flex-wrap: wrap;
+gap: 24px;
 }
 
+.our-portfolio-card {
+ width: calc((100%-48))/3;
+border-bottom: 1px solid #e7e9fc;
+border-left: 1px solid #e7e9fc;
+ border-right: 1px solid #e7e9fc;
+
+}
 .our-portfolio-title {
     font-weight:500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding-top: 32px;
+    padding-bottom: 8px;
+    padding-left: 16px;
 }
 
 .our-portfolio-list {
@@ -163,11 +263,14 @@ background-color:#ffffff;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-left: 16px;
 }
 
 /* Footer */
 .footer {
 background-color: #2E2F42;
+padding-top: 100px;
+padding-bottom: 100px;
 }
 .footer-text {
     font-weight: 400;
@@ -175,6 +278,11 @@ background-color: #2E2F42;
     line-height:1.5;
     letter-spacing:0.02em;
     color:#f4f4fd;
+    max-width: 264px;
+    padding-left: 156px;
+    margin-top: 17px;
+    
+    
 }
 
 .footer-logo {
@@ -185,8 +293,18 @@ color: #4D5AE5;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    padding-left: 156px;
+
+    
     }
 
     .footer-logo-part {
     color: #f4f4fd;
     }
+
+   
+
+    
+    
+   
+    
