--- a/css/styles.css
+++ b/css/styles.css
@@ -17,28 +17,32 @@ margin-top: 0;
 margin-bottom: 0;
 padding-left: 0;
 }
- img {
-     display: block;
-     height: auto;
-     max-width: 100%;
- }
 
- .container {
-     max-width: 1158px;
-     padding-left: 15px;
-     padding-right: 15px;
-     margin-left: auto;
-     margin-right: auto;
-     outline: 1px solid red;
- }
+img {
+display: block;
+height: auto;
+max-width: 100%;
+}
+
+.container {
+max-width: 1158px;
+padding-left: 15px;
+padding-right: 15px;
+margin-left: auto;
+margin-right: auto;
+}
 
 /* Page Header */
-
-
+.header {
+border-bottom: 1px solid E7E9FC;
+}
+.container-header {
+  display: flex; 
+  justify-content: space-between; 
+}
 .nav-page {
 display: flex;
 align-items: center;
-
 }
 .logo {
 color:#4D5AE5;
@@ -52,21 +56,20 @@ margin-right: 76px;
 }
 
 .logo-part {
-    color:#2e2f42;
+color:#2e2f42;
 }
 .nav-list {
 display: flex;
-justify-content: space-between;
 column-gap: 40px;
 padding-top: 24px;
 padding-bottom: 24px;
 }
 .nav-link {
-    color:#2E2F42;
-    font-size: 16px;
-     font-weight: 500;
-     line-height: 1.5;
-    letter-spacing: 0.02em;
+ color:#2E2F42;
+ font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+ letter-spacing: 0.02em;
 }
 
 .nav-link:hover,
@@ -75,66 +78,69 @@ color:#404BBF;
 }
       
 .address {
-    font-style:normal;
+font-style:normal;
 }
 .address-page {
 display: flex;
 align-items: center;
+padding-top: 24px;
+padding-left: 156px;
+
 }
 .address-link {
-    color:#434455;
-    font-size:16px;
-    line-height:1.5;
-    letter-spacing:0.02em;
+ color:#434455;
+ font-size:16px;
+ line-height:1.5;
+ letter-spacing:0.02em;
 }
 .address-link:hover,
 .address-link:focus {
     color:#404BBF;
 }
-
+.address-item {
+padding-right: 40px;
+}
 
 /* Hero section */
 .hero-section {
 background-color:#2E2F42;
 padding: 188px 0;
-
-
 }
 
 .hero-section-title {
-    font-weight:700;
-    font-size:56px;
-    line-height:1.07;
-    text-align:center;
-    letter-spacing:0.02em;
-    color:#ffffff;
-    max-width: 496px;
-    margin-left: auto;
-     margin-right: auto;
-     margin-bottom: 48px;
+ font-weight:700;
+font-size:56px;
+ line-height:1.07;
+ text-align:center;
+ letter-spacing:0.02em;
+ color:#ffffff;
+ max-width: 496px;
+ margin-left: auto;
+ margin-right: auto;
+ margin-bottom: 48px;
 }
 
 .hero-section-button {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color:white;
-    background: #4d5ae5;
-    margin-left: auto;
-     margin-right: auto;
-     display: block;
-    border-radius: 4px;
-    padding: 16px 32px;
-    min-width: 169px;
-     height: 56px;
-     border: none;
+font-weight: 500;
+font-size: 16px; 
+line-height: 1.5;
+letter-spacing: 0.04em;
+color:white;
+background: #4d5ae5;
+margin-left: auto;
+margin-right: auto;
+display: block;
+border-radius: 4px;
+padding: 16px 32px;
+min-width: 169px;
+height: 56px;
+border: none;
 }
 .hero-section-button:hover,
 .hero-section-button:focus {
-    background-color:#404BBF;
-    color:#ffffff ;
-    cursor:pointer;
+background-color:#404BBF;
+color:#ffffff ;
+cursor:pointer;
 }
 
 
@@ -171,7 +177,6 @@ width: calc((100%-72))/4;
 background-color:#F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
-
 }
 
 .page-our-team {
@@ -179,14 +184,14 @@ display: flex;
 gap: 24px;
 }
 .our-team-title {
-    font-weight: 700;
-    font-size:36px;
-    line-height:1.11;
-    letter-spacing:0.02em;
-    text-transform:capitalize;
-    text-align:center;
-    color:#2e2f42;
-    margin-bottom: 72px;
+font-weight: 700;
+font-size:36px;
+line-height:1.11;
+letter-spacing:0.02em;
+text-transform:capitalize;
+text-align:center;
+color:#2e2f42;
+margin-bottom: 72px;
 }
 .our-team-item {
 background-color:#ffffff;
@@ -195,27 +200,27 @@ border-radius: 0 0 4px 4px;
 }
 
 .our-team-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-align:center;
-    color: #2e2f42;
-    background-color: #ffffff;
-    padding-top: 32px;
-    padding-bottom: 8px;
-    padding-left: 65px;
-    padding-right: 65px;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align:center;
+color: #2e2f42;
+background-color: #ffffff;
+padding-top: 32px;
+padding-bottom: 8px;
+padding-left: 65px;
+padding-right: 65px;
     
 }
 
 .our-team-role {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #434455;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
 }
 
 /* Our portfolio */
@@ -224,14 +229,14 @@ padding-top: 120px;
 padding-bottom: 120px;
 }
 .our-portfolio {
-    font-weight:700;
-    font-size: 36px;
-    line-height:1.11;
-    letter-spacing:0.02em;
-    text-transform:capitalize;
-    text-align:center;
-    color:#2e2f42;
-    margin-bottom: 72px;
+font-weight:700;
+font-size: 36px;
+line-height:1.11;
+letter-spacing:0.02em;
+text-transform:capitalize;
+text-align:center;
+color:#2e2f42;
+margin-bottom: 72px;
 }
 .page-portfolio {
 display: flex;
@@ -240,30 +245,29 @@ gap: 24px;
 }
 
 .our-portfolio-card {
- width: calc((100%-48))/3;
+width: calc((100%-48))/3;
 border-bottom: 1px solid #e7e9fc;
-border-left: 1px solid #e7e9fc;
- border-right: 1px solid #e7e9fc;
+
 
 }
 .our-portfolio-title {
-    font-weight:500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    padding-top: 32px;
-    padding-bottom: 8px;
-    padding-left: 16px;
+font-weight:500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+padding-top: 32px;
+padding-bottom: 8px;
+padding-left: 16px;
 }
 
 .our-portfolio-list {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    padding-left: 16px;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+padding-left: 16px;
 }
 
 /* Footer */
@@ -273,34 +277,30 @@ padding-top: 100px;
 padding-bottom: 100px;
 }
 .footer-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height:1.5;
-    letter-spacing:0.02em;
-    color:#f4f4fd;
-    max-width: 264px;
-    padding-left: 156px;
-    margin-top: 17px;
-    
-    
+font-weight: 400;
+font-size: 16px;
+line-height:1.5;
+letter-spacing:0.02em;
+color:#f4f4fd;
+max-width: 264px;
+padding-left: 156px;
+margin-top: 17.5px;
 }
 
 .footer-logo {
 color: #4D5AE5;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    padding-left: 156px;
+font-family: Raleway, sans-serif;
+font-size: 18px;
+font-weight: 700;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+padding-left: 156px;
+ }
 
-    
-    }
-
-    .footer-logo-part {
-    color: #f4f4fd;
-    }
+ .footer-logo-part {
+ color: #f4f4fd;
+}
 
    
 
