--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@ background-color:#ffffff;
 a {
 text-decoration: none;
 }
+button {
+cursor: pointer;
+}
 
 h1,h2,h3,h4,h5,h6,p {
 margin: 0;
@@ -34,7 +37,7 @@ margin-right: auto;
 
 /* Page Header */
 .header {
-border-bottom: 1px solid E7E9FC;
+border-bottom:1px solid E7E9FC;
 }
 .container-header {
   display: flex; 
@@ -60,9 +63,9 @@ color:#2e2f42;
 }
 .nav-list {
 display: flex;
-column-gap: 40px;
-padding-top: 24px;
-padding-bottom: 24px;
+gap: 40px;
+padding-top:24px;
+padding-bottom:24px;
 }
 .nav-link {
  color:#2E2F42;
@@ -70,6 +73,7 @@ padding-bottom: 24px;
   font-weight: 500;
   line-height: 1.5;
  letter-spacing: 0.02em;
+ gap: 40px;
 }
 
 .nav-link:hover,
@@ -151,7 +155,19 @@ padding-bottom: 120px;
 }
 .our-advantages-item {
 display: flex;
-gap: 24px;
+row-gap:48px;
+}
+.hidden {
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
 }
 .our-advantages-list {
 width: calc((100%-72))/4;
@@ -162,6 +178,7 @@ width: calc((100%-72))/4;
     line-height:1.2;
     letter-spacing:0.02em;
     color:#2e2f42;
+    margin-bottom: 8px;
 }
 
 .our-advantages-text {
@@ -242,6 +259,7 @@ margin-bottom: 72px;
 display: flex;
 flex-wrap: wrap;
 gap: 24px;
+
 }
 
 .our-portfolio-card {
