--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ border-bottom:1px solid E7E9FC;
 .container-header {
   display: flex; 
   justify-content: space-between; 
+border-bottom: 1px solid E7E9FC;
 }
 .nav-page {
 display: flex;
@@ -64,8 +65,8 @@ color:#2e2f42;
 .nav-list {
 display: flex;
 gap: 40px;
-padding-top:24px;
-padding-bottom:24px;
+padding:24px 0;
+
 }
 .nav-link {
  color:#2E2F42;
@@ -96,6 +97,7 @@ padding-left: 156px;
  font-size:16px;
  line-height:1.5;
  letter-spacing:0.02em;
+gap: 40px;
 }
 .address-link:hover,
 .address-link:focus {
@@ -157,7 +159,7 @@ padding-bottom: 120px;
 display: flex;
 row-gap:48px;
 }
-.hidden {
+.visually-hidden {
 position: absolute;
 width: 1px;
 height: 1px;
@@ -170,7 +172,7 @@ clip: rect(0 0 0 0);
 overflow: hidden;
 }
 .our-advantages-list {
-width: calc((100%-72))/4;
+width: calc((100%-72px))/4;
 }
 .our-advantages {
     font-weight:500;
@@ -228,9 +230,12 @@ padding-top: 32px;
 padding-bottom: 8px;
 padding-left: 65px;
 padding-right: 65px;
+margin-bottom: 8px;
     
 }
-
+.team-container-item {
+padding: 32px 0;
+}
 .our-team-role {
 font-weight: 400;
 font-size: 16px;
@@ -263,7 +268,7 @@ gap: 24px;
 }
 
 .our-portfolio-card {
-width: calc((100%-48))/3;
+width: calc((100%-48px))/3;
 border-bottom: 1px solid #e7e9fc;
 
 
@@ -303,6 +308,7 @@ color:#f4f4fd;
 max-width: 264px;
 padding-left: 156px;
 margin-top: 17.5px;
+max-width: 264px;
 }
 
 .footer-logo {
@@ -314,6 +320,8 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 padding-left: 156px;
+display: inline-block;
+margin-bottom: 16px;
  }
 
  .footer-logo-part {
