--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ border-bottom:1px solid E7E9FC;
 .container-header {
   display: flex; 
   justify-content: space-between; 
-border-bottom: 1px solid E7E9FC;
+border-bottom:1px solid #E7E9FC;
 }
 .nav-page {
 display: flex;
@@ -64,7 +64,7 @@ color:#2e2f42;
 }
 .nav-list {
 display: flex;
-gap: 40px;
+gap:40px;
 padding:24px 0;
 
 }
@@ -98,6 +98,7 @@ padding-left: 156px;
  line-height:1.5;
  letter-spacing:0.02em;
 gap: 40px;
+padding: 24px 0;
 }
 .address-link:hover,
 .address-link:focus {
@@ -158,6 +159,7 @@ padding-bottom: 120px;
 .our-advantages-item {
 display: flex;
 row-gap:48px;
+gap: 24px;
 }
 .visually-hidden {
 position: absolute;
