--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ margin-right: auto;
 
 /* Page Header */
 .header {
-border-bottom:1px solid E7E9FC;
+border-bottom:1px solid #E7E9FC;
 }
 .container-header {
   display: flex; 
@@ -75,6 +75,7 @@ padding:24px 0;
   line-height: 1.5;
  letter-spacing: 0.02em;
  gap: 40px;
+ padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -90,6 +91,7 @@ display: flex;
 align-items: center;
 padding-top: 24px;
 padding-left: 156px;
+gap: 40px;
 
 }
 .address-link {
@@ -174,7 +176,7 @@ clip: rect(0 0 0 0);
 overflow: hidden;
 }
 .our-advantages-list {
-width: calc((100%-72px))/4;
+width: calc((100%-72px)/4);
 }
 .our-advantages {
     font-weight:500;
@@ -270,7 +272,7 @@ gap: 24px;
 }
 
 .our-portfolio-card {
-width: calc((100%-48px))/3;
+width: calc((100%-48px)/3);
 border-bottom: 1px solid #e7e9fc;
 
 
