--- a/css/styles.css
+++ b/css/styles.css
@@ -300,8 +300,8 @@ padding-left: 16px;
 /* Footer */
 .footer {
 background-color: #2E2F42;
-padding-top: 100px;
-padding-bottom: 100px;
+padding: 100px 0;
+
 }
 .footer-text {
 font-weight: 400;
@@ -310,9 +310,8 @@ line-height:1.5;
 letter-spacing:0.02em;
 color:#f4f4fd;
 max-width: 264px;
-padding-left: 156px;
-margin-top: 17.5px;
-max-width: 264px;
+
+
 }
 
 .footer-logo {
@@ -323,11 +322,9 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-padding-left: 156px;
 display: inline-block;
 margin-bottom: 16px;
  }
-
  .footer-logo-part {
  color: #f4f4fd;
 }
