--- a/css/styles.css
+++ b/css/styles.css
@@ -267,22 +267,28 @@ margin-bottom: 72px;
 .page-portfolio {
 display: flex;
 flex-wrap: wrap;
-gap: 24px;
-
+column-gap: 24px;
+row-gap: 48px;
 }
 
 .our-portfolio-card {
-width: calc((100%-48px)/3);
-border-bottom: 1px solid #e7e9fc;
-
-
+width: calc((100%-48px)/3);  
 }
+
+
+.our-portfolio-card-item {
+padding: 32px 16px;
+border-bottom: 1px solid #e7e9fc;
+border-top: none;
+}
+
 .our-portfolio-title {
 font-weight:500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+margin-bottom: 8px;
 padding-top: 32px;
 padding-bottom: 8px;
 padding-left: 16px;
